# gt-unlocked

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  prepare_release.ps1
src/: dinput8.c  fps.c  fps.h  memory.c  memory.h  version.h
src/minhook/: hook.c
